# ef

dynamo-svc/: CMakeLists.txt  Dockerfile  build.sh  config.json  dynamo-svc.sln
dynamo-svc/dynamo-svc/: CMakeLists.txt  main.cpp  sqs_handler.cpp
dynamo-svc/dynamo-svc-src/: CMakeLists.txt  config.json  db_dynamo.cpp  db_dynamo.h  dynamo-svc.vcxproj  main.h  sqs_handler.h
email-svc/: CMakeLists.txt  Dockerfile  build.sh  config.json  email-svc.sln
email-svc/email-svc/: CMakeLists.txt  config.json  main.h  sqs_handler.cpp
email-svc/email-svc-src/: CMakeLists.txt  email-svc.vcxproj  main.cpp  sqs_handler.h  vtspch.h
